fixed navbar collapse for mobile

--- a/prototype/styles/app.css
+++ b/prototype/styles/app.css
@@ -1,3 +1,34 @@
+@media (min-width: 300px) {
+.navbar-header {
+        float: left;
+}
+.navbar-toggle {
+    display: none;
+}
+.navbar-collapse {
+    border-top: 0 none;
+    box-shadow: none;
+    width: auto;
+}
+.navbar-collapse.collapse {
+    display: block !important;
+    height: auto !important;
+    padding-bottom: 0;
+    overflow: visible !important;
+}
+.navbar-nav {
+    float: left !important;
+    margin: 0;
+}
+.navbar-nav>li {
+    float: left;
+}
+.navbar-nav>li>a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+}
+
 #content {
 	padding: 5px;
 	width: 100%;
